IDE/Compilador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BEGIN
    DOWN
    FALSE
    POS
    POSX
    POSY
    SPEED
    STRING
    TRUE
    UP
    USECOLOR

Grammar

Rule 0     S' -> sentencias
Rule 1     sentencias -> sentencias sentencia
Rule 2     sentencias -> sentencia
Rule 3     sentencia -> expresion
Rule 4     sentencia -> add
Rule 5     sentencia -> continue
Rule 6     sentencia -> operacion
Rule 7     sentencia -> condicion
Rule 8     sentencia -> operadorlogico
Rule 9     sentencia -> comentario
Rule 10    sentencia -> funcionreservada
Rule 11    sentencia -> funcion
Rule 12    sentencia -> DEF ID IGUAL valor PYC
Rule 13    sentencia -> PUT ID IGUAL valor PYC
Rule 14    sentencia -> PUT ID IGUAL expresion PYC
Rule 15    add -> ADD CORCHETEIZQ ID CORCHETEDER PYC
Rule 16    add -> ADD CORCHETEIZQ ID ID CORCHETEDER PYC
Rule 17    add -> ADD CORCHETEIZQ ID INT CORCHETEDER PYC
Rule 18    valor -> INT
Rule 19    valor -> ID
Rule 20    continue -> CONTINUEUP valor PYC
Rule 21    continue -> CONTINUEUP expresion PYC
Rule 22    continue -> CONTINUEDOWN valor PYC
Rule 23    continue -> CONTINUEDOWN expresion PYC
Rule 24    continue -> CONTINUERIGHT valor PYC
Rule 25    continue -> CONTINUERIGHT expresion PYC
Rule 26    continue -> CONTINUELEFT valor PYC
Rule 27    continue -> CONTINUELEFT expresion PYC
Rule 28    expresion -> expresion PLUS expresion
Rule 29    expresion -> expresion RESTA expresion
Rule 30    expresion -> expresion MULTIPLICACION expresion
Rule 31    expresion -> expresion DIVISION expresion
Rule 32    expresion -> expresion POTENCIA expresion
Rule 33    expresion -> RESTA expresion
Rule 34    expresion -> INT
Rule 35    expresion -> PARENTESISIZQ expresion PARENTESISDER
Rule 36    comentario -> COMENTARIO
Rule 37    condicion -> expresion MAYORQUE expresion
Rule 38    condicion -> expresion MENORQUE expresion
Rule 39    condicion -> expresion MENOROIGUAL expresion
Rule 40    condicion -> expresion MAYOROIGUAL expresion
Rule 41    condicion -> expresion IGUAL expresion
Rule 42    condicion -> valor IGUAL valor
Rule 43    condicion -> valor MAYORQUE valor
Rule 44    condicion -> valor MENORQUE valor
Rule 45    condicion -> valor MENOROIGUAL valor
Rule 46    condicion -> valor MAYOROIGUAL valor
Rule 47    condicion -> EQUAL PARENTESISIZQ expresion COMA expresion PARENTESISDER PYC
Rule 48    condicion -> GREATER PARENTESISIZQ expresion COMA expresion PARENTESISDER PYC
Rule 49    condicion -> SMALLER PARENTESISIZQ expresion COMA expresion PARENTESISDER PYC
Rule 50    operadorlogico -> AND PARENTESISIZQ condicion COMA condicion PARENTESISDER PYC
Rule 51    operadorlogico -> OR PARENTESISIZQ condicion COMA condicion PARENTESISDER PYC
Rule 52    operacion -> SUBSTR PARENTESISIZQ parametros PARENTESISDER PYC
Rule 53    operacion -> RANDOM PARENTESISIZQ expresion PARENTESISDER PYC
Rule 54    operacion -> POWER PARENTESISIZQ expresion COMA expresion PARENTESISDER PYC
Rule 55    operacion -> DIV PARENTESISIZQ expresion COMA expresion PARENTESISDER PYC
Rule 56    operacion -> SUM PARENTESISIZQ parametros PARENTESISDER PYC
Rule 57    operacion -> MULT PARENTESISIZQ parametros PARENTESISDER PYC
Rule 58    parametros -> expresion
Rule 59    parametros -> valor
Rule 60    parametros -> parametros COMA expresion
Rule 61    parametros -> parametros COMA valor
Rule 62    funcionreservada -> RUN CORCHETEIZQ ordenes CORCHETEDER PYC
Rule 63    funcionreservada -> REPEAT valor CORCHETEIZQ ordenes CORCHETEDER PYC
Rule 64    funcionreservada -> IF PARENTESISIZQ condicion PARENTESISDER CORCHETEIZQ ordenes CORCHETEDER PYC
Rule 65    funcionreservada -> IFELSE PARENTESISIZQ condicion PARENTESISDER CORCHETEIZQ ordenes CORCHETEDER CORCHETEIZQ ordenes CORCHETEDER PYC
Rule 66    funcionreservada -> UNTIL CORCHETEIZQ ordenes CORCHETEDER CORCHETEIZQ condicionciclo CORCHETEDER PYC
Rule 67    funcionreservada -> UNTIL CORCHETEIZQ ordenes CORCHETEDER PARENTESISIZQ condicionciclo PARENTESISDER PYC
Rule 68    funcionreservada -> WHILE CORCHETEIZQ condicionciclo CORCHETEDER CORCHETEIZQ ordenes CORCHETEDER PYC
Rule 69    funcionreservada -> WHILE PARENTESISIZQ condicionciclo PARENTESISDER CORCHETEIZQ ordenes CORCHETEDER PYC
Rule 70    condicionciclo -> expresion MAYORQUE expresion
Rule 71    condicionciclo -> expresion MENORQUE expresion
Rule 72    condicionciclo -> expresion MENOROIGUAL expresion
Rule 73    condicionciclo -> expresion MAYOROIGUAL expresion
Rule 74    condicionciclo -> expresion IGUAL expresion
Rule 75    condicionciclo -> valor IGUAL valor
Rule 76    condicionciclo -> valor MAYORQUE valor
Rule 77    condicionciclo -> valor MENORQUE valor
Rule 78    condicionciclo -> valor MENOROIGUAL valor
Rule 79    condicionciclo -> valor MAYOROIGUAL valor
Rule 80    funcion -> PARA ID CORCHETEIZQ parametros CORCHETEDER ordenes FIN
Rule 81    funcion -> PARA MAIN CORCHETEIZQ parametros CORCHETEDER ordenes FIN
Rule 82    funcion -> PARA MAIN ordenesmain FIN
Rule 83    ordenes -> continue
Rule 84    ordenes -> funcionreservada
Rule 85    ordenes -> add
Rule 86    ordenes -> sentencia
Rule 87    ordenes -> ordenes add
Rule 88    ordenes -> ordenes sentencia
Rule 89    ordenes -> ordenes funcionreservada
Rule 90    ordenes -> ordenes continue
Rule 91    ordenesmain -> sentencia
Rule 92    ordenesmain -> continue
Rule 93    ordenesmain -> condicion
Rule 94    ordenesmain -> operadorlogico
Rule 95    ordenesmain -> operacion
Rule 96    ordenesmain -> funcionreservada
Rule 97    ordenesmain -> funcion
Rule 98    ordenesmain -> ordenesmain sentencia
Rule 99    ordenesmain -> ordenesmain continue
Rule 100   ordenesmain -> ordenesmain condicion
Rule 101   ordenesmain -> ordenesmain operadorlogico
Rule 102   ordenesmain -> ordenesmain operacion
Rule 103   ordenesmain -> ordenesmain funcionreservada
Rule 104   ordenesmain -> ordenesmain funcion

Terminals, with rules where they appear

ADD                  : 15 16 17
AND                  : 50
BEGIN                : 
COMA                 : 47 48 49 50 51 54 55 60 61
COMENTARIO           : 36
CONTINUEDOWN         : 22 23
CONTINUELEFT         : 26 27
CONTINUERIGHT        : 24 25
CONTINUEUP           : 20 21
CORCHETEDER          : 15 16 17 62 63 64 65 65 66 66 67 68 68 69 80 81
CORCHETEIZQ          : 15 16 17 62 63 64 65 65 66 66 67 68 68 69 80 81
DEF                  : 12
DIV                  : 55
DIVISION             : 31
DOWN                 : 
EQUAL                : 47
FALSE                : 
FIN                  : 80 81 82
GREATER              : 48
ID                   : 12 13 14 15 16 16 17 19 80
IF                   : 64
IFELSE               : 65
IGUAL                : 12 13 14 41 42 74 75
INT                  : 17 18 34
MAIN                 : 81 82
MAYOROIGUAL          : 40 46 73 79
MAYORQUE             : 37 43 70 76
MENOROIGUAL          : 39 45 72 78
MENORQUE             : 38 44 71 77
MULT                 : 57
MULTIPLICACION       : 30
OR                   : 51
PARA                 : 80 81 82
PARENTESISDER        : 35 47 48 49 50 51 52 53 54 55 56 57 64 65 67 69
PARENTESISIZQ        : 35 47 48 49 50 51 52 53 54 55 56 57 64 65 67 69
PLUS                 : 28
POS                  : 
POSX                 : 
POSY                 : 
POTENCIA             : 32
POWER                : 54
PUT                  : 13 14
PYC                  : 12 13 14 15 16 17 20 21 22 23 24 25 26 27 47 48 49 50 51 52 53 54 55 56 57 62 63 64 65 66 67 68 69
RANDOM               : 53
REPEAT               : 63
RESTA                : 29 33
RUN                  : 62
SMALLER              : 49
SPEED                : 
STRING               : 
SUBSTR               : 52
SUM                  : 56
TRUE                 : 
UNTIL                : 66 67
UP                   : 
USECOLOR             : 
WHILE                : 68 69
error                : 

Nonterminals, with rules where they appear

add                  : 4 85 87
comentario           : 9
condicion            : 7 50 50 51 51 64 65 93 100
condicionciclo       : 66 67 68 69
continue             : 5 83 90 92 99
expresion            : 3 14 21 23 25 27 28 28 29 29 30 30 31 31 32 32 33 35 37 37 38 38 39 39 40 40 41 41 47 47 48 48 49 49 53 54 54 55 55 58 60 70 70 71 71 72 72 73 73 74 74
funcion              : 11 97 104
funcionreservada     : 10 84 89 96 103
operacion            : 6 95 102
operadorlogico       : 8 94 101
ordenes              : 62 63 64 65 65 66 67 68 69 80 81 87 88 89 90
ordenesmain          : 82 98 99 100 101 102 103 104
parametros           : 52 56 57 60 61 80 81
sentencia            : 1 2 86 88 91 98
sentencias           : 1 0
valor                : 12 13 20 22 24 26 42 42 43 43 44 44 45 45 46 46 59 61 63 75 75 76 76 77 77 78 78 79 79

Parsing method: LALR

state 0

    (0) S' -> . sentencias
    (1) sentencias -> . sentencias sentencia
    (2) sentencias -> . sentencia
    (3) sentencia -> . expresion
    (4) sentencia -> . add
    (5) sentencia -> . continue
    (6) sentencia -> . operacion
    (7) sentencia -> . condicion
    (8) sentencia -> . operadorlogico
    (9) sentencia -> . comentario
    (10) sentencia -> . funcionreservada
    (11) sentencia -> . funcion
    (12) sentencia -> . DEF ID IGUAL valor PYC
    (13) sentencia -> . PUT ID IGUAL valor PYC
    (14) sentencia -> . PUT ID IGUAL expresion PYC
    (28) expresion -> . expresion PLUS expresion
    (29) expresion -> . expresion RESTA expresion
    (30) expresion -> . expresion MULTIPLICACION expresion
    (31) expresion -> . expresion DIVISION expresion
    (32) expresion -> . expresion POTENCIA expresion
    (33) expresion -> . RESTA expresion
    (34) expresion -> . INT
    (35) expresion -> . PARENTESISIZQ expresion PARENTESISDER
    (15) add -> . ADD CORCHETEIZQ ID CORCHETEDER PYC
    (16) add -> . ADD CORCHETEIZQ ID ID CORCHETEDER PYC
    (17) add -> . ADD CORCHETEIZQ ID INT CORCHETEDER PYC
    (20) continue -> . CONTINUEUP valor PYC
    (21) continue -> . CONTINUEUP expresion PYC
    (22) continue -> . CONTINUEDOWN valor PYC
    (23) continue -> . CONTINUEDOWN expresion PYC
    (24) continue -> . CONTINUERIGHT valor PYC
    (25) continue -> . CONTINUERIGHT expresion PYC
    (26) continue -> . CONTINUELEFT valor PYC
    (27) continue -> . CONTINUELEFT expresion PYC
    (52) operacion -> . SUBSTR PARENTESISIZQ parametros PARENTESISDER PYC
    (53) operacion -> . RANDOM PARENTESISIZQ expresion PARENTESISDER PYC
    (54) operacion -> . POWER PARENTESISIZQ expresion COMA expresion PARENTESISDER PYC
    (55) operacion -> . DIV PARENTESISIZQ expresion COMA expresion PARENTESISDER PYC
    (56) operacion -> . SUM PARENTESISIZQ parametros PARENTESISDER PYC
    (57) operacion -> . MULT PARENTESISIZQ parametros PARENTESISDER PYC
    (37) condicion -> . expresion MAYORQUE expresion
    (38) condicion -> . expresion MENORQUE expresion
    (39) condicion -> . expresion MENOROIGUAL expresion
    (40) condicion -> . expresion MAYOROIGUAL expresion
    (41) condicion -> . expresion IGUAL expresion
    (42) condicion -> . valor IGUAL valor
    (43) condicion -> . valor MAYORQUE valor
    (44) condicion -> . valor MENORQUE valor
    (45) condicion -> . valor MENOROIGUAL valor
    (46) condicion -> . valor MAYOROIGUAL valor
    (47) condicion -> . EQUAL PARENTESISIZQ expresion COMA expresion PARENTESISDER PYC
    (48) condicion -> . GREATER PARENTESISIZQ expresion COMA expresion PARENTESISDER PYC
    (49) condicion -> . SMALLER PARENTESISIZQ expresion COMA expresion PARENTESISDER PYC
    (50) operadorlogico -> . AND PARENTESISIZQ condicion COMA condicion PARENTESISDER PYC
    (51) operadorlogico -> . OR PARENTESISIZQ condicion COMA condicion PARENTESISDER PYC
    (36) comentario -> . COMENTARIO
    (62) funcionreservada -> . RUN CORCHETEIZQ ordenes CORCHETEDER PYC
    (63) funcionreservada -> . REPEAT valor CORCHETEIZQ ordenes CORCHETEDER PYC
    (64) funcionreservada -> . IF PARENTESISIZQ condicion PARENTESISDER CORCHETEIZQ ordenes CORCHETEDER PYC
    (65) funcionreservada -> . IFELSE PARENTESISIZQ condicion PARENTESISDER CORCHETEIZQ ordenes CORCHETEDER CORCHETEIZQ ordenes CORCHETEDER PYC
    (66) funcionreservada -> . UNTIL CORCHETEIZQ ordenes CORCHETEDER CORCHETEIZQ condicionciclo CORCHETEDER PYC
    (67) funcionreservada -> . UNTIL CORCHETEIZQ ordenes CORCHETEDER PARENTESISIZQ condicionciclo PARENTESISDER PYC
    (68) funcionreservada -> . WHILE CORCHETEIZQ condicionciclo CORCHETEDER CORCHETEIZQ ordenes CORCHETEDER PYC
    (69) funcionreservada -> . WHILE PARENTESISIZQ condicionciclo PARENTESISDER CORCHETEIZQ ordenes CORCHETEDER PYC
    (80) funcion -> . PARA ID CORCHETEIZQ parametros CORCHETEDER ordenes FIN
    (81) funcion -> . PARA MAIN CORCHETEIZQ parametros CORCHETEDER ordenes FIN
    (82) funcion -> . PARA MAIN ordenesmain FIN
    (18) valor -> . INT
    (19) valor -> . ID

    DEF             shift and go to state 12
    PUT             shift and go to state 15
    RESTA           shift and go to state 16
    INT             shift and go to state 17
    PARENTESISIZQ   shift and go to state 18
    ADD             shift and go to state 19
    CONTINUEUP      shift and go to state 20
    CONTINUEDOWN    shift and go to state 21
    CONTINUERIGHT   shift and go to state 22
    CONTINUELEFT    shift and go to state 23
    SUBSTR          shift and go to state 24
    RANDOM          shift and go to state 25
    POWER           shift and go to state 26
    DIV             shift and go to state 27
    SUM             shift and go to state 28
    MULT            shift and go to state 29
    EQUAL           shift and go to state 30
    GREATER         shift and go to state 31
    SMALLER         shift and go to state 32
    AND             shift and go to state 33
    OR              shift and go to state 34
    COMENTARIO      shift and go to state 35
    RUN             shift and go to state 36
    REPEAT          shift and go to state 37
    IF              shift and go to state 38
    IFELSE          shift and go to state 39
    UNTIL           shift and go to state 40
    WHILE           shift and go to state 41
    PARA            shift and go to state 42
    ID              shift and go to state 13

    sentencias                     shift and go to state 1
    sentencia                      shift and go to state 2
    expresion                      shift and go to state 3
    add                            shift and go to state 4
    continue                       shift and go to state 5
    operacion                      shift and go to state 6
    condicion                      shift and go to state 7
    operadorlogico                 shift and go to state 8
    comentario                     shift and go to state 9
    funcionreservada               shift and go to state 10
    funcion                        shift and go to state 11
    valor                          shift and go to state 14

state 1

    (0) S' -> sentencias .
    (1) sentencias -> sentencias . sentencia
    (3) sentencia -> . expresion
    (4) sentencia -> . add
    (5) sentencia -> . continue
    (6) sentencia -> . operacion
    (7) sentencia -> . condicion
    (8) sentencia -> . operadorlogico
    (9) sentencia -> . comentario
    (10) sentencia -> . funcionreservada
    (11) sentencia -> . funcion
    (12) sentencia -> . DEF ID IGUAL valor PYC
    (13) sentencia -> . PUT ID IGUAL valor PYC
    (14) sentencia -> . PUT ID IGUAL expresion PYC
    (28) expresion -> . expresion PLUS expresion
    (29) expresion -> . expresion RESTA expresion
    (30) expresion -> . expresion MULTIPLICACION expresion
    (31) expresion -> . expresion DIVISION expresion
    (32) expresion -> . expresion POTENCIA expresion
    (33) expresion -> . RESTA expresion
    (34) expresion -> . INT
    (35) expresion -> . PARENTESISIZQ expresion PARENTESISDER
    (15) add -> . ADD CORCHETEIZQ ID CORCHETEDER PYC
    (16) add -> . ADD CORCHETEIZQ ID ID CORCHETEDER PYC
    (17) add -> . ADD CORCHETEIZQ ID INT CORCHETEDER PYC
    (20) continue -> . CONTINUEUP valor PYC
    (21) continue -> . CONTINUEUP expresion PYC
    (22) continue -> . CONTINUEDOWN valor PYC
    (23) continue -> . CONTINUEDOWN expresion PYC
    (24) continue -> . CONTINUERIGHT valor PYC
    (25) continue -> . CONTINUERIGHT expresion PYC
    (26) continue -> . CONTINUELEFT valor PYC
    (27) continue -> . CONTINUELEFT expresion PYC
    (52) operacion -> . SUBSTR PARENTESISIZQ parametros PARENTESISDER PYC
    (53) operacion -> . RANDOM PARENTESISIZQ expresion PARENTESISDER PYC
    (54) operacion -> . POWER PARENTESISIZQ expresion COMA expresion PARENTESISDER PYC
    (55) operacion -> . DIV PARENTESISIZQ expresion COMA expresion PARENTESISDER PYC
    (56) operacion -> . SUM PARENTESISIZQ parametros PARENTESISDER PYC
    (57) operacion -> . MULT PARENTESISIZQ parametros PARENTESISDER PYC
    (37) condicion -> . expresion MAYORQUE expresion
    (38) condicion -> . expresion MENORQUE expresion
    (39) condicion -> . expresion MENOROIGUAL expresion
    (40) condicion -> . expresion MAYOROIGUAL expresion
    (41) condicion -> . expresion IGUAL expresion
    (42) condicion -> . valor IGUAL valor
    (43) condicion -> . valor MAYORQUE valor
    (44) condicion -> . valor MENORQUE valor
    (45) condicion -> . valor MENOROIGUAL valor
    (46) condicion -> . valor MAYOROIGUAL valor
    (47) condicion -> . EQUAL PARENTESISIZQ expresion COMA expresion PARENTESISDER PYC
    (48) condicion -> . GREATER PARENTESISIZQ expresion COMA expresion PARENTESISDER PYC
    (49) condicion -> . SMALLER PARENTESISIZQ expresion COMA expresion PARENTESISDER PYC
    (50) operadorlogico -> . AND PARENTESISIZQ condicion COMA condicion PARENTESISDER PYC
    (51) operadorlogico -> . OR PARENTESISIZQ condicion COMA condicion PARENTESISDER PYC
    (36) comentario -> . COMENTARIO
    (62) funcionreservada -> . RUN CORCHETEIZQ ordenes CORCHETEDER PYC
    (63) funcionreservada -> . REPEAT valor CORCHETEIZQ ordenes CORCHETEDER PYC
    (64) funcionreservada -> . IF PARENTESISIZQ condicion PARENTESISDER CORCHETEIZQ ordenes CORCHETEDER PYC
    (65) funcionreservada -> . IFELSE PARENTESISIZQ condicion PARENTESISDER CORCHETEIZQ ordenes CORCHETEDER CORCHETEIZQ ordenes CORCHETEDER PYC
    (66) funcionreservada -> . UNTIL CORCHETEIZQ ordenes CORCHETEDER CORCHETEIZQ condicionciclo CORCHETEDER PYC
    (67) funcionreservada -> . UNTIL CORCHETEIZQ ordenes CORCHETEDER PARENTESISIZQ condicionciclo PARENTESISDER PYC
    (68) funcionreservada -> . WHILE CORCHETEIZQ condicionciclo CORCHETEDER CORCHETEIZQ ordenes CORCHETEDER PYC
    (69) funcionreservada -> . WHILE PARENTESISIZQ condicionciclo PARENTESISDER CORCHETEIZQ ordenes CORCHETEDER PYC
    (80) funcion -> . PARA ID CORCHETEIZQ parametros CORCHETEDER ordenes FIN
    (81) funcion -> . PARA MAIN CORCHETEIZQ parametros CORCHETEDER ordenes FIN
    (82) funcion -> . PARA MAIN ordenesmain FIN
    (18) valor -> . INT
    (19) valor -> . ID

    DEF             shift and go to state 12
    PUT             shift and go to state 15
    RESTA           shift and go to state 16
    INT             shift and go to state 17
    PARENTESISIZQ   shift and go to state 18
    ADD             shift and go to state 19
    CONTINUEUP      shift and go to state 20
    CONTINUEDOWN    shift and go to state 21
    CONTINUERIGHT   shift and go to state 22
    CONTINUELEFT    shift and go to state 23
    SUBSTR          shift and go to state 24
    RANDOM          shift and go to state 25
    POWER           shift and go to state 26
    DIV             shift and go to state 27
    SUM             shift and go to state 28
    MULT            shift and go to state 29
    EQUAL           shift and go to state 30
    GREATER         shift and go to state 31
    SMALLER         shift and go to state 32
    AND             shift and go to state 33
    OR              shift and go to state 34
    COMENTARIO      shift and go to state 35
    RUN             shift and go to state 36
    REPEAT          shift and go to state 37
    IF              shift and go to state 38
    IFELSE          shift and go to state 39
    UNTIL           shift and go to state 40
    WHILE           shift and go to state 41
    PARA            shift and go to state 42
    ID              shift and go to state 13

    sentencia                      shift and go to state 43
    expresion                      shift and go to state 3
    add                            shift and go to state 4
    continue                       shift and go to state 5
    operacion                      shift and go to state 6
    condicion                      shift and go to state 7
    operadorlogico                 shift and go to state 8
    comentario                     shift and go to state 9
    funcionreservada               shift and go to state 10
    funcion                        shift and go to state 11
    valor                          shift and go to state 14

state 2

    (2) sentencias -> sentencia .

    DEF             reduce using rule 2 (sentencias -> sentencia .)
    PUT             reduce using rule 2 (sentencias -> sentencia .)
    RESTA           reduce using rule 2 (sentencias -> sentencia .)
    INT             reduce using rule 2 (sentencias -> sentencia .)
    PARENTESISIZQ   reduce using rule 2 (sentencias -> sentencia .)
    ADD             reduce using rule 2 (sentencias -> sentencia .)
    CONTINUEUP      reduce using rule 2 (sentencias -> sentencia .)
    CONTINUEDOWN    reduce using rule 2 (sentencias -> sentencia .)
    CONTINUERIGHT   reduce using rule 2 (sentencias -> sentencia .)
    CONTINUELEFT    reduce using rule 2 (sentencias -> sentencia .)
    SUBSTR          reduce using rule 2 (sentencias -> sentencia .)
    RANDOM          reduce using rule 2 (sentencias -> sentencia .)
    POWER           reduce using rule 2 (sentencias -> sentencia .)
    DIV             reduce using rule 2 (sentencias -> sentencia .)
    SUM             reduce using rule 2 (sentencias -> sentencia .)
    MULT            reduce using rule 2 (sentencias -> sentencia .)
    EQUAL           reduce using rule 2 (sentencias -> sentencia .)
    GREATER         reduce using rule 2 (sentencias -> sentencia .)
    SMALLER         reduce using rule 2 (sentencias -> sentencia .)
    AND             reduce using rule 2 (sentencias -> sentencia .)
    OR              reduce using rule 2 (sentencias -> sentencia .)
    COMENTARIO      reduce using rule 2 (sentencias -> sentencia .)
    RUN             reduce using rule 2 (sentencias -> sentencia .)
    REPEAT          reduce using rule 2 (sentencias -> sentencia .)
    IF              reduce using rule 2 (sentencias -> sentencia .)
    IFELSE          reduce using rule 2 (sentencias -> sentencia .)
    UNTIL           reduce using rule 2 (sentencias -> sentencia .)
    WHILE           reduce using rule 2 (sentencias -> sentencia .)
    PARA            reduce using rule 2 (sentencias -> sentencia .)
    ID              reduce using rule 2 (sentencias -> sentencia .)
    $end            reduce using rule 2 (sentencias -> sentencia .)


state 3

    (3) sentencia -> expresion .
    (28) expresion -> expresion . PLUS expresion
    (29) expresion -> expresion . RESTA expresion
    (30) expresion -> expresion . MULTIPLICACION expresion
    (31) expresion -> expresion . DIVISION expresion
    (32) expresion -> expresion . POTENCIA expresion
    (37) condicion -> expresion . MAYORQUE expresion
    (38) condicion -> expresion . MENORQUE expresion
    (39) condicion -> expresion . MENOROIGUAL expresion
    (40) condicion -> expresion . MAYOROIGUAL expresion
    (41) condicion -> expresion . IGUAL expresion

  ! shift/reduce conflict for RESTA resolved as shift
    DEF             reduce using rule 3 (sentencia -> expresion .)
    PUT             reduce using rule 3 (sentencia -> expresion .)
    INT             reduce using rule 3 (sentencia -> expresion .)
    PARENTESISIZQ   reduce using rule 3 (sentencia -> expresion .)
    ADD             reduce using rule 3 (sentencia -> expresion .)
    CONTINUEUP      reduce using rule 3 (sentencia -> expresion .)
    CONTINUEDOWN    reduce using rule 3 (sentencia -> expresion .)
    CONTINUERIGHT   reduce using rule 3 (sentencia -> expresion .)
    CONTINUELEFT    reduce using rule 3 (sentencia -> expresion .)
    SUBSTR          reduce using rule 3 (sentencia -> expresion .)
    RANDOM          reduce using rule 3 (sentencia -> expresion .)
    POWER           reduce using rule 3 (sentencia -> expresion .)
    DIV             reduce using rule 3 (sentencia -> expresion .)
    SUM             reduce using rule 3 (sentencia -> expresion .)
    MULT            reduce using rule 3 (sentencia -> expresion .)
    EQUAL           reduce using rule 3 (sentencia -> expresion .)
    GREATER         reduce using rule 3 (sentencia -> expresion .)
    SMALLER         reduce using rule 3 (sentencia -> expresion .)
    AND             reduce using rule 3 (sentencia -> expresion .)
    OR              reduce using rule 3 (sentencia -> expresion .)
    COMENTARIO      reduce using rule 3 (sentencia -> expresion .)
    RUN             reduce using rule 3 (sentencia -> expresion .)
    REPEAT          reduce using rule 3 (sentencia -> expresion .)
    IF              reduce using rule 3 (sentencia -> expresion .)
    IFELSE          reduce using rule 3 (sentencia -> expresion .)
    UNTIL           reduce using rule 3 (sentencia -> expresion .)
    WHILE           reduce using rule 3 (sentencia -> expresion .)
    PARA            reduce using rule 3 (sentencia -> expresion .)
    ID              reduce using rule 3 (sentencia -> expresion .)
    $end            reduce using rule 3 (sentencia -> expresion .)
    CORCHETEDER     reduce using rule 3 (sentencia -> expresion .)
    FIN             reduce using rule 3 (sentencia -> expresion .)
    PLUS            shift and go to state 44
    RESTA           shift and go to state 45
    MULTIPLICACION  shift and go to state 46
    DIVISION        shift and go to state 47
    POTENCIA        shift and go to state 48
    MAYORQUE        shift and go to state 49
    MENORQUE        shift and go to state 50
    MENOROIGUAL     shift and go to state 51
    MAYOROIGUAL     shift and go to state 52
    IGUAL           shift and go to state 53

  ! RESTA           [ reduce using rule 3 (sentencia -> expresion .) ]


state 4

    (4) sentencia -> add .

    DEF             reduce using rule 4 (sentencia -> add .)
    PUT             reduce using rule 4 (sentencia -> add .)
    RESTA           reduce using rule 4 (sentencia -> add .)
    INT             reduce using rule 4 (sentencia -> add .)
    PARENTESISIZQ   reduce using rule 4 (sentencia -> add .)
    ADD             reduce using rule 4 (sentencia -> add .)
    CONTINUEUP      reduce using rule 4 (sentencia -> add .)
    CONTINUEDOWN    reduce using rule 4 (sentencia -> add .)
    CONTINUERIGHT   reduce using rule 4 (sentencia -> add .)
    CONTINUELEFT    reduce using rule 4 (sentencia -> add .)
    SUBSTR          reduce using rule 4 (sentencia -> add .)
    RANDOM          reduce using rule 4 (sentencia -> add .)
    POWER           reduce using rule 4 (sentencia -> add .)
    DIV             reduce using rule 4 (sentencia -> add .)
    SUM             reduce using rule 4 (sentencia -> add .)
    MULT            reduce using rule 4 (sentencia -> add .)
    EQUAL           reduce using rule 4 (sentencia -> add .)
    GREATER         reduce using rule 4 (sentencia -> add .)
    SMALLER         reduce using rule 4 (sentencia -> add .)
    AND             reduce using rule 4 (sentencia -> add .)
    OR              reduce using rule 4 (sentencia -> add .)
    COMENTARIO      reduce using rule 4 (sentencia -> add .)
    RUN             reduce using rule 4 (sentencia -> add .)
    REPEAT          reduce using rule 4 (sentencia -> add .)
    IF              reduce using rule 4 (sentencia -> add .)
    IFELSE          reduce using rule 4 (sentencia -> add .)
    UNTIL           reduce using rule 4 (sentencia -> add .)
    WHILE           reduce using rule 4 (sentencia -> add .)
    PARA            reduce using rule 4 (sentencia -> add .)
    ID              reduce using rule 4 (sentencia -> add .)
    $end            reduce using rule 4 (sentencia -> add .)
    FIN             reduce using rule 4 (sentencia -> add .)


state 5

    (5) sentencia -> continue .

    DEF             reduce using rule 5 (sentencia -> continue .)
    PUT             reduce using rule 5 (sentencia -> continue .)
    RESTA           reduce using rule 5 (sentencia -> continue .)
    INT             reduce using rule 5 (sentencia -> continue .)
    PARENTESISIZQ   reduce using rule 5 (sentencia -> continue .)
    ADD             reduce using rule 5 (sentencia -> continue .)
    CONTINUEUP      reduce using rule 5 (sentencia -> continue .)
    CONTINUEDOWN    reduce using rule 5 (sentencia -> continue .)
    CONTINUERIGHT   reduce using rule 5 (sentencia -> continue .)
    CONTINUELEFT    reduce using rule 5 (sentencia -> continue .)
    SUBSTR          reduce using rule 5 (sentencia -> continue .)
    RANDOM          reduce using rule 5 (sentencia -> continue .)
    POWER           reduce using rule 5 (sentencia -> continue .)
    DIV             reduce using rule 5 (sentencia -> continue .)
    SUM             reduce using rule 5 (sentencia -> continue .)
    MULT            reduce using rule 5 (sentencia -> continue .)
    EQUAL           reduce using rule 5 (sentencia -> continue .)
    GREATER         reduce using rule 5 (sentencia -> continue .)
    SMALLER         reduce using rule 5 (sentencia -> continue .)
    AND             reduce using rule 5 (sentencia -> continue .)
    OR              reduce using rule 5 (sentencia -> continue .)
    COMENTARIO      reduce using rule 5 (sentencia -> continue .)
    RUN             reduce using rule 5 (sentencia -> continue .)
    REPEAT          reduce using rule 5 (sentencia -> continue .)
    IF              reduce using rule 5 (sentencia -> continue .)
    IFELSE          reduce using rule 5 (sentencia -> continue .)
    UNTIL           reduce using rule 5 (sentencia -> continue .)
    WHILE           reduce using rule 5 (sentencia -> continue .)
    PARA            reduce using rule 5 (sentencia -> continue .)
    ID              reduce using rule 5 (sentencia -> continue .)
    $end            reduce using rule 5 (sentencia -> continue .)


state 6

    (6) sentencia -> operacion .
